# MeTerm

./: .gitignore  KNOWN_ISSUES.md  LICENSE  Makefile  README.md  README_CN.md  README_EN.md  THIRD_PARTY_LICENSES.md  UPDATE.md  build-backends.sh  build-macos.sh  dev-win.ps1
.github/workflows/: build-linux.yml  build-macos-x86-native.yml  build-macos.yml  build-windows-native.yml  build-windows.yml
backend/: e2e_test.go  go.mod  go.sum  main.go  parent_unix.go  parent_windows.go  signal_unix.go  signal_windows.go
backend/api/: auth.go  ban.go  discover.go  file_handler.go  file_handler_test.go  handler.go  jumpserver_handler.go  pairing.go  proxyproto.go  server_info.go  ws.go
backend/executor/: executor.go  local.go  ssh.go
backend/jumpserver/: client.go
backend/protocol/: file_messages.go  file_messages_test.go  protocol.go
backend/sftp/: client.go  (+1 more)
cloudflare-worker/: update-worker.js  wrangler.toml
desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/crates/russh-sftp/: .cargo_vcs_info.json  Cargo.toml
desktop/src-tauri/crates/russh-sftp/src/client/: mod.rs  rawsession.rs
desktop/src-tauri/crates/russh-sftp/src/client/fs/: file.rs
desktop/src-tauri/finder-extension/: FinderSync.swift  Info.plist
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/icons/tray/: icon.icns
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  sidecar.rs  tldr.rs  vibrancy.rs
desktop/src-tauri/src/commands/: ai.rs  context_menu.rs  fs.rs  ipc_terminal.rs  lan.rs  lifecycle.rs  menu.rs  mod.rs  security.rs  session.rs  ssh.rs  window.rs
desktop/src-tauri/src/server/: auth.rs  ban.rs  discover.rs  dispatch.rs  encoding.rs  file_handler.rs  handlers.rs  mod.rs  osc_filter.rs  pairing.rs  protocol.rs  proxy.rs  recording.rs  server_info.rs  web_embed.rs  ws.rs
desktop/src-tauri/src/server/executor/: local.rs  mod.rs  ssh.rs
desktop/src-tauri/src/server/jumpserver/: handler.rs  mod.rs
desktop/src-tauri/src/server/session/: client.rs  manager.rs  mod.rs  state.rs  transfer.rs
desktop/src-tauri/src/server/terminal/: mod.rs  mouse_windows.rs  pty_unix.rs  pty_windows.rs  pty_wsl.rs  ssh.rs
docs/: API.md  CONFIGURATION.md  PROTOCOL.md  RECORDING.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: download-conpty.sh
(+153 files in other folders)
