[package]
name = "meterm"
version = "0.2.1"
edition = "2021"
license = "MIT"

[lib]
name = "meterm_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "macos-private-api", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"  # kept for optional Go sidecar fallback (METERM_GO_SIDECAR=1)
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
libc = "0.2"

# In-process HTTP/WebSocket server (replaces Go sidecar)
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# Cross-platform PTY
xpty = "0.3"

# SSH
russh = "0.46"
russh-sftp = { path = "crates/russh-sftp" }
russh-keys = "0.46"

# mDNS service discovery
mdns-sd = "0.12"

# Character encoding conversion
encoding_rs = "0.8"

# System information
sysinfo = "0.33"

# Embed web frontend static files
rust-embed = "8"

# Random token generation
rand = "0.8"

# Async trait support
async-trait = "0.1"

# URL encoding
urlencoding = "2"

# File time manipulation (for touch command)
filetime = "0.2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
notify-rust = "4"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
local-ip-address = "0.6.10"
hostname = "0.4.2"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
dirs = "6"
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = [
    "NSWindow", "NSResponder", "NSGraphics", "NSColor",
    "NSButton", "NSControl", "NSView",
] }
objc2-foundation = { version = "0.2", features = ["NSNotification", "NSString", "NSThread", "NSOperation", "block2"] }
block2 = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"

[profile.release]
strip = true
lto = true
codegen-units = 1
